--- a/src/chat.html
+++ b/src/chat.html
@@ -8,11 +8,11 @@
 </head>
 <body class="body">
     <section class="chats__container">
-        <div class="chats__header">
+        <header class="chats__header">
             <button type="button" class="chats__header__avatar" id="open-profile">
                 <img src="https://as1.ftcdn.net/v2/jpg/02/59/39/46/1000_F_259394679_GGA8JJAEkukYJL9XXFH2JoC3nMguBPNH.jpg" alt="" id="user-login">
             </button>
-        </div>
+        </header>
         <div class="chats__search">
             <div class="chats__search__container">
                 <button type="button" id="seachUser">
@@ -58,7 +58,7 @@
         </div>
     </section>
     <section class="message__container" id="chat">
-        <div class="message__header__container">
+        <header class="message__header__container">
             <div class="message__header__left">
                 <button type="button" class="message__header__left__close" id="close-chat">
                     <img src="app/asset/icons/arrow-left-black.svg" alt="close-chat">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </header>
         <div class="content" id="conversation">
         </div>
         <form class="message__footer" id="form">
