--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
         <div class="wrap__login">
             <form class="form__login__title">
                 <span class="form__login__title">
-                    Login
+                    Iniciar sesión
                 </span>
                 <div class="form__login__wrap__fields">
                     <span class="form__login__wrap__fields__label">Celular</span>
-                    <input class="form__login__wrap__fields__input"type="text" id="cellPhone" name="username" placeholder="Ingresa tu número de celular"> 
+                    <input class="form__login__wrap__fields__input" type="text" id="cellPhone" name="username" placeholder="Ingresa tu número de celular"> 
                 </div>
 
                 <div class="form__login__wrap__fields">
@@ -25,7 +25,7 @@
 
                 <div class="form__login__btn">
                     <button class="login100-form-btn" id="signin">
-                        Login
+                        Iniciar sesión
                     </button>
                 </div>
                 <div class="form__login__signUp">
@@ -33,7 +33,7 @@
                         O regístrate usando
                     </span>
                     <a href="./signup.html" class="form__login__signUp__link">
-                        Sign Up
+                        Regístrate
                     </a>
                 </div>
             </form>
