--- a/src/signup.html
+++ b/src/signup.html
@@ -11,12 +11,11 @@
         <div class="wrap__login">
             <form class="form__login" id="form">
                 <span class="form__login__title">
-                    Create a account
+                    Crear una cuenta
                 </span>
                 <div class="form__login__img">
                     <img src="https://w7.pngwing.com/pngs/340/946/png-transparent-avatar-user-computer-icons-software-developer-avatar-child-face-heroes-thumbnail.png" id="profile">
                 </div>
-                <div class="form__login__img" id="profile" style="background-image: url(https://w7.pngwing.com/pngs/340/946/png-transparent-avatar-user-computer-icons-software-developer-avatar-child-face-heroes-thumbnail.png);"></div>
                 <div class="form__login__wrap__fields">
                     <span class="form__login__wrap__fields__label">Nombre</span>
                     <input class="form__login__wrap__fields__input" id="userName" type="text" name="username" placeholder="John Doe">
@@ -39,7 +38,7 @@
                 </div>
                 <div class="form__login__btn">
                     <button class="login100-form-btn" type="submit" id="sentData">
-                        Sign Up
+                        Registro
                     </button>
                 </div>
                 <div class="form__login__signUp">
@@ -47,7 +46,7 @@
                     ¡Ya eres usuario!
                     </span>
                     <a href="./index.html" class="form__login__signUp__link">
-                        Sign In
+                        Iniciar sesión
                     </a>
                 </div>
             </form>
